// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RendererActions applyAnnotation should apply annotation to caption of top level media 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          {
            "content": [
              {
                "marks": [
                  {
                    "attrs": {
                      "annotationType": "inlineComment",
                      "id": "<<<ANNOTATION-ID>>>",
                    },
                    "type": "annotation",
                  },
                ],
                "text": "cute",
                "type": "text",
              },
              {
                "text": " dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 1,
  "numMatches": 4,
  "originalSelection": "cute",
  "pos": undefined,
  "step": {
    "from": 41,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 45,
  },
  "targetNodeType": "caption",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to text with inline nodes 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "leading text",
            "type": "text",
          },
          {
            "attrs": {
              "id": "1f642",
              "shortName": ":slight_smile:",
              "text": "🙂",
            },
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "emoji",
          },
          {
            "attrs": {
              "color": "neutral",
              "localId": "48059fb1-aaf9-4838-9a25-e7c6315caf69",
              "style": "",
              "text": "status",
            },
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "status",
          },
          {
            "attrs": {
              "timestamp": "1572480000000",
            },
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "date",
          },
          {
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "tailing text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": [
    "date",
    "emoji",
    "status",
    "text",
  ],
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "leading texttailing text",
  "pos": undefined,
  "step": {
    "from": 0,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 29,
  },
  "targetNodeType": "text",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the caption of nested media 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          {
            "content": [
              {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute ",
                            "type": "text",
                          },
                          {
                            "marks": [
                              {
                                "attrs": {
                                  "annotationType": "inlineComment",
                                  "id": "<<<ANNOTATION-ID>>>",
                                },
                                "type": "annotation",
                              },
                            ],
                            "text": "cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 1,
  "numMatches": 2,
  "originalSelection": "cat",
  "pos": undefined,
  "step": {
    "from": 68,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 71,
  },
  "targetNodeType": "caption",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the formatted text 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "more formatt",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "ed text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          {
            "content": [
              {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "more formatt",
  "pos": undefined,
  "step": {
    "from": 18,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 30,
  },
  "targetNodeType": "text",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the nested media 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          {
            "content": [
              {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "marks": [
                          {
                            "attrs": {
                              "annotationType": "inlineComment",
                              "id": "<<<ANNOTATION-ID>>>",
                            },
                            "type": "annotation",
                          },
                        ],
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 0,
  "originalSelection": "",
  "pos": 61,
  "step": {
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 61,
    "stepType": "addNodeMark",
  },
  "targetNodeType": "media",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the plain text 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "text": "some pla",
            "type": "text",
          },
          {
            "text": "in text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "type": "media",
          },
          {
            "content": [
              {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 1,
  "originalSelection": "some pla",
  "pos": undefined,
  "step": {
    "from": 0,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "addMark",
    "to": 9,
  },
  "targetNodeType": "text",
}
`;

exports[`RendererActions applyAnnotation should apply annotation to the top-level media 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "some plain text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
            ],
            "text": "more formatted text",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "attrs": {
          "layout": "center",
          "width": 426,
          "widthType": "pixel",
        },
        "content": [
          {
            "attrs": {
              "alt": "568c02f0-5949-4465-8f43-e7f9b1f7ead5.png",
              "collection": "MediaServicesSample",
              "height": 500,
              "id": "6ee23984-95e4-4e9c-bff3-3723de5db792",
              "type": "file",
              "width": 500,
            },
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "<<<ANNOTATION-ID>>>",
                },
                "type": "annotation",
              },
            ],
            "type": "media",
          },
          {
            "content": [
              {
                "text": "cute dog",
                "type": "text",
              },
            ],
            "type": "caption",
          },
        ],
        "type": "mediaSingle",
      },
      {
        "attrs": {
          "isNumberColumnEnabled": false,
          "layout": "default",
          "localId": "709775b2-c4ad-4b47-bb63-023bfc655bb4",
          "width": 760,
        },
        "content": [
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableHeader",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "attrs": {
                      "layout": "center",
                      "width": 426,
                      "widthType": "pixel",
                    },
                    "content": [
                      {
                        "attrs": {
                          "alt": "catt.jpeg",
                          "collection": "MediaServicesSample",
                          "height": 1194,
                          "id": "e407b8a4-edb3-42d2-8425-7aa022c815c0",
                          "type": "file",
                          "width": 2121,
                        },
                        "type": "media",
                      },
                      {
                        "content": [
                          {
                            "text": "cute cat",
                            "type": "text",
                          },
                        ],
                        "type": "caption",
                      },
                    ],
                    "type": "mediaSingle",
                  },
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
          {
            "content": [
              {
                "attrs": {},
                "content": [
                  {
                    "content": [],
                    "type": "paragraph",
                  },
                ],
                "type": "tableCell",
              },
            ],
            "type": "tableRow",
          },
        ],
        "type": "table",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "inlineNodeTypes": undefined,
  "matchIndex": 0,
  "numMatches": 0,
  "originalSelection": "",
  "pos": 39,
  "step": {
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 39,
    "stepType": "addNodeMark",
  },
  "targetNodeType": "media",
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation on media with provided ID 1`] = `
{
  "doc": {
    "content": [
      {
        "attrs": {
          "alt": "dog-puppy.jpeg",
          "collection": "contentId-3533084563",
          "height": 1197,
          "id": "c7ef3a01-d45c-41e3-a662-67ccb54d088f",
          "type": "file",
          "width": 1200,
        },
        "type": "media",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": {
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "pos": 0,
    "stepType": "removeNodeMark",
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation when spanning multiple nodes 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
      {
        "content": [
          {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": {
    "from": 1,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 15,
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation with provided ID 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "text": "Hello!",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": {
    "from": 1,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 7,
  },
}
`;

exports[`RendererActions deleteAnnotation should delete the annotation with provided ID without touching overlapping marks 1`] = `
{
  "doc": {
    "content": [
      {
        "content": [
          {
            "marks": [
              {
                "attrs": {
                  "href": "https://www.atlassian.com",
                },
                "type": "link",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "Hello, ",
            "type": "text",
          },
          {
            "marks": [
              {
                "attrs": {
                  "href": "https://www.atlassian.com",
                },
                "type": "link",
              },
              {
                "type": "strong",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "World!",
            "type": "text",
          },
          {
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " Look I can do ",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "3bac13b6-b121-457e-adbc-a447ad21b7bd",
                },
                "type": "annotation",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "italic",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " ",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": ", strong ",
            "type": "text",
          },
          {
            "marks": [
              {
                "type": "em",
              },
              {
                "type": "strong",
              },
              {
                "type": "underline",
              },
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": "and underlined text!",
            "type": "text",
          },
          {
            "marks": [
              {
                "attrs": {
                  "annotationType": "inlineComment",
                  "id": "0f8c5903-d571-4f55-97cb-a9bb986fcede",
                },
                "type": "annotation",
              },
            ],
            "text": " and",
            "type": "text",
          },
          {
            "text": " action mark",
            "type": "text",
          },
          {
            "text": " and invalid action mark",
            "type": "text",
          },
        ],
        "type": "paragraph",
      },
    ],
    "type": "doc",
    "version": 1,
  },
  "step": {
    "from": 15,
    "mark": {
      "attrs": {
        "annotationType": "inlineComment",
        "id": "<<<ANNOTATION-ID>>>",
      },
      "type": "annotation",
    },
    "stepType": "removeMark",
    "to": 25,
  },
}
`;
